[package]
name = "tree_and_graphs1"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "Snakes_and_ladders", "binary_tree_zigzag_level_order_traversal", "deepest_leaves_sum", "diameter_of_binary_tree", "find_if_path_exists_in_graph", "insert_into_a_binary_search_tree", "jump_game_III", "max_area_of_island",
    "maximum",
    "minimum_depth_of_binary_tree"
, "minimum_genetic_mutation", "nearest_exit_from_entrance_in_maze", "reachable_nodes_with_restrictions"]

[dependencies]
